# fastapi-practice

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/infrastructure/: database.py
app/post/: __init__.py  container.py
app/post/adapters/inbound/: router.py
app/post/adapters/outbound/: orm_model.py  repository.py
app/post/application/: services.py
app/post/application/ports/: inbound.py  outbound.py
app/post/domain/: exceptions.py  model.py
app/user/: __init__.py  container.py
app/user/adapters/inbound/: router.py
app/user/adapters/outbound/: orm_model.py  repository.py
app/user/application/: services.py
app/user/application/ports/: inbound.py  outbound.py
app/user/domain/: exceptions.py  model.py
tests/: test_main.py
